...
                        value: status.willAutoRenew ? "ON" : "OFF"
                    )
                }

                DetailRow(
                    title: "バージョン",
                    value: "v1.0"
                )
            }
        }
        .padding()
        .background(
            RoundedRectangle(cornerRadius: 12)
...
